--- a/app/src/main/res/layout/expense_view.xml
+++ b/app/src/main/res/layout/expense_view.xml
@@ -46,8 +46,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="80dp"
                 android:gravity="start|center_vertical"
-                android:textSize="44sp"
-                android:singleLine="true"/>
+                android:singleLine="true"
+                android:textSize="44sp" />
 
 
 
